--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,10 +5,30 @@
             "label": "Build Main",
             "type": "shell",
             "command": "g++ -g main.cpp -o main.out",
+            "group": "build"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: g++ kompiluj aktywny plik",
+            "command": "/usr/bin/g++",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
             "group": {
                 "kind": "build",
                 "isDefault": true
-            }
+            },
+            "detail": "Zadanie wygenerowane przez debuger."
         }
     ]
 }
